<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The PenguinOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SudContentFrame"
        android:layout_marginTop="@dimen/base_margin_top">

        <FrameLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/content_margin_left"
                        android:paddingRight="@dimen/content_margin_right"
                        android:text="@string/volume_panel_style_label"
                        android:textColor="?android:attr/colorAccent"
                        style="@style/SudItemTitle" />

                    <RadioGroup
                        android:id="@+id/volume_panel_style_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_volume_panel_default"
                            android:text="@string/volume_panel_style_default"
                            style="@style/SudRadioButton" />

                        <RadioButton
                            android:id="@+id/radio_volume_panel_expandable"
                            android:text="@string/volume_panel_style_expandable"
                            style="@style/SudRadioButton" />

                        <RadioButton
                            android:id="@+id/radio_volume_panel_oneui"
                            android:text="@string/volume_panel_style_oneui"
                            style="@style/SudRadioButton" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/content_margin_left"
                        android:paddingRight="@dimen/content_margin_right"
                        android:paddingTop="@dimen/customisation_section_spacing"
                        android:text="@string/power_menu_style_label"
                        android:textColor="?android:attr/colorAccent"
                        style="@style/SudItemTitle" />

                    <RadioGroup
                        android:id="@+id/power_menu_style_radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radio_power_menu_penguin"
                            android:text="@string/power_menu_style_penguin"
                            style="@style/SudRadioButton" />

                        <RadioButton
                            android:id="@+id/radio_power_menu_ios"
                            android:text="@string/power_menu_style_ios"
                            style="@style/SudRadioButton" />

                    </RadioGroup>

                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <org.lineageos.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>
